--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Your Weather</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://freesvg.org/img/1277950229.png">
+  <link rel="icon" type="image/x-icon" href="assets/images/clouds.png">
 </head>
 <body>
   <app-root></app-root>
